--- a/articulo.html
+++ b/articulo.html
@@ -8,6 +8,15 @@
             <div id="post">
                 <h1>Aqui vamos a hacer un post.</h1>
                 <p>Y este es el parrafo.</p>
+                <p>
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, 
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                    Excepteur sint occaecat cupidatat non proident, 
+                    sunt in culpa qui officia deserunt mollit anim id est laborum."
+                </p>
             </div>
         </div>
     </body>
