--- a/articulo.html
+++ b/articulo.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Blog
-                <span id="tagline">Tu blog de confianza</span> 
+                <span id="tagline">Blog de cabecera</span> 
             </div>
             <div id="post">
                 <h1>Aqui vamos a hacer un post.</h1>
