--- a/articulo.html
+++ b/articulo.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Blog
-                <span id="tagline">Tu blog de confianza</span> 
+                <span id="tagline">Tu blog maestro</span> 
             </div>
             <div id="post">
                 <h1>Aqui vamos a hacer un post.</h1>
@@ -21,6 +21,7 @@
                     Excepteur sint occaecat cupidatat non proident, 
                     sunt in culpa qui officia deserunt mollit anim id est laborum."
                 </p>
+                <p>Suscribite y dale like</p>
             </div>
         </div>
     </body>
