--- a/articulo.html
+++ b/articulo.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>CAMBIO DE TITULO</title>
+        <title>CAMBIO DE TITULO 2.0</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
