Agregado blog increible pero con el comando vi

--- a/articulo.html
+++ b/articulo.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Blog
+                Blog increible
                 <span id="tagline">Blog de cabecera</span> 
             </div>
             <div id="post">
